...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-img" translatesAutoresizingMaskIntoConstraints="NO" id="NNF-5P-kyr">
                                <rect key="frame" x="-4" y="20" width="383" height="647"/>
                            </imageView>
...
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLv-dt-1PG">
                                        <rect key="frame" x="31" y="609" width="107" height="30"/>
                                        <state key="normal" title="Create Account">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                                </connections>
                                            </button>
                                            <textField clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2Mi-gH-WHv" customClass="CustomTextFi
                                                <rect key="frame" x="0.0" y="50" width="320" height="50"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Terms and Conditions" id="nt1-O1-v04">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="GS6-1O-35E">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Agree" style="done" id="Z1A-VW-vQC">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
                                <rect key="frame" x="0.0" y="201" width="375" height="402"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Igh-h6-EVS" customClass="CustomTextField" customModule="Hu
                                        <rect key="frame" x="20" y="20" width="335" height="40"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ded-Lm-bfH" customClass="CustomTextField" customModule="Hub
                                        <rect key="frame" x="20" y="68" width="335" height="40"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="FhX-98-1o8" customClass="CustomTextField" customModule="Hub" cu
                                        <rect key="frame" x="20" y="116" width="335" height="40"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" secureTextEntry="YES"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AdV-dM-svh" customClass="CustomTextField" customModule="Hub" customModuleProvider="
                                        <rect key="frame" x="20" y="212" width="335" height="40"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Create Account" id="iAe-AZ-hyx">
                        <barButtonItem key="rightBarButtonItem" image="tick" style="done" id="1jY-PO-ZFI">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
