...
      }
    }
  }
  
  /* Build an alert controller with camera and gallery as default options  */
  class func buildImagePickAlertController(imagePicker: UIImagePickerController, view: UIViewController) -> UIAlertController {
    let alert = UIAlertController(title: "Choose Image", message: nil, preferredStyle: UIAlertControllerStyle.ActionSheet)
    let cameraAction = UIAlertAction(title: "Camera", style: UIAlertActionStyle.Default) {
      UIAlertAction in
      self.openCamera(imagePicker, view: view)
    }
    
    let gallaryAction = UIAlertAction(title: "Gallary", style: UIAlertActionStyle.Default) {
      UIAlertAction in
      self.openGallary(imagePicker, view: view)
    }
    
    let cancelAction = UIAlertAction(title: "Cancel", style: UIAlertActionStyle.Default) { UIAlertAction in }
    
...
